SERVER-91090: Explicitly specify shard distribution for moveCollection/unshardCollection. (#22945)

GitOrigin-RevId: b91638d2828c3cb89ccd3bb05ad9de320b42a1fd